# SmartScreenshot

./: pyproject.toml
.github/workflows/: publish.yml
gtk-app/: app.py
src/smartscreenshot/: __init__.py  app.py
src/smartscreenshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/smartscreenshot/scripts/secrets-handling-custom-keywords/: main.py
